--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -2,100 +2,134 @@
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:background="@color/light_gray"
     android:layout_height="match_parent" tools:context="com.nju.fragment.SettingFragment">
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:orientation="vertical"
+        android:scrollbars="none"
         android:layout_height="match_parent">
-        <TextView
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_marginTop="@dimen/padding_left"
-            android:paddingTop="15dp"
-            android:paddingBottom="15dp"
-            android:paddingLeft="@dimen/padding_left"
-            android:background="@drawable/item_toggle_bg"
-            android:layout_height="wrap_content"
-            android:textColor="@android:color/black"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="@string/function_desc"
-            android:id="@+id/function_desc" />
-        <TextView
-            android:layout_width="match_parent"
-            android:paddingTop="15dp"
-            android:paddingBottom="15dp"
-            android:paddingLeft="@dimen/padding_left"
-            android:id="@+id/sys_notice"
-            android:background="@drawable/item_toggle_bg"
-            android:layout_height="wrap_content"
-            android:textColor="@android:color/black"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="@string/sys_notice"
-             />
-        <TextView
-            android:layout_width="match_parent"
-            android:paddingTop="15dp"
-            android:paddingBottom="15dp"
-            android:paddingLeft="@dimen/padding_left"
-            android:id="@+id/help_fellback"
-            android:background="@drawable/item_toggle_bg"
-            android:layout_height="wrap_content"
-            android:textColor="@android:color/black"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="@string/help_fellback"
-            />
-        <TextView
-            android:layout_width="match_parent"
-            android:paddingTop="15dp"
-            android:paddingBottom="15dp"
-            android:paddingLeft="@dimen/padding_left"
-            android:id="@+id/jubao_tousu"
-            android:background="@drawable/item_toggle_bg"
-            android:layout_height="wrap_content"
-            android:textColor="@android:color/black"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="@string/jubao_tousu"
-            />
+            android:orientation="vertical"
+            android:layout_height="wrap_content">
+            <RelativeLayout
+                android:id="@+id/setHeadLayout"
+                android:layout_width="match_parent"
+                android:orientation="horizontal"
+                android:layout_marginTop="@dimen/padding_left"
+                android:background="@drawable/item_toggle_bg"
+                android:paddingStart="@dimen/padding_left"
+                android:paddingEnd="@dimen/padding_left"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:text="@string/head"
+                    android:textAppearance="?android:attr/textAppearanceMedium"
+                    android:textColor="@android:color/black"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_alignParentStart="true" />
+                <ImageView
+                    android:id="@+id/headIconImg"
+                    android:layout_marginTop="@dimen/phone_apadding"
+                    android:layout_marginBottom="@dimen/phone_apadding"
+                    android:scaleType="fitXY"
+                    android:layout_width="@dimen/dp50"
+                    android:src="@drawable/cheese_1"
+                    android:clickable="false"
+                    android:layout_height="@dimen/dp50"
+                    android:layout_alignParentTop="true"
+                    android:layout_alignParentEnd="true" />
+            </RelativeLayout>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_marginTop="@dimen/padding_left"
+                android:paddingTop="15dp"
+                android:paddingBottom="15dp"
+                android:paddingLeft="@dimen/padding_left"
+                android:background="@drawable/item_toggle_bg"
+                android:layout_height="wrap_content"
+                android:textColor="@android:color/black"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:text="@string/function_desc"
+                android:id="@+id/function_desc" />
+            <TextView
+                android:layout_width="match_parent"
+                android:paddingTop="15dp"
+                android:paddingBottom="15dp"
+                android:paddingLeft="@dimen/padding_left"
+                android:id="@+id/sys_notice"
+                android:background="@drawable/item_toggle_bg"
+                android:layout_height="wrap_content"
+                android:textColor="@android:color/black"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:text="@string/sys_notice"
+                 />
+            <TextView
+                android:layout_width="match_parent"
+                android:paddingTop="15dp"
+                android:paddingBottom="15dp"
+                android:paddingLeft="@dimen/padding_left"
+                android:id="@+id/help_fellback"
+                android:background="@drawable/item_toggle_bg"
+                android:layout_height="wrap_content"
+                android:textColor="@android:color/black"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:text="@string/help_fellback"
+                />
+            <TextView
+                android:layout_width="match_parent"
+                android:paddingTop="15dp"
+                android:paddingBottom="15dp"
+                android:paddingLeft="@dimen/padding_left"
+                android:id="@+id/jubao_tousu"
+                android:background="@drawable/item_toggle_bg"
+                android:layout_height="wrap_content"
+                android:textColor="@android:color/black"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:text="@string/jubao_tousu"
+                />
 
 
-        <TextView
-            android:layout_width="match_parent"
-            android:paddingTop="15dp"
-            android:paddingBottom="15dp"
-            android:paddingLeft="@dimen/padding_left"
-            android:id="@+id/check_new_version"
-            android:background="@drawable/item_toggle_bg"
-            android:layout_height="wrap_content"
-            android:textColor="@android:color/black"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="@string/check_new_version"
-            />
+            <TextView
+                android:layout_width="match_parent"
+                android:paddingTop="15dp"
+                android:paddingBottom="15dp"
+                android:paddingLeft="@dimen/padding_left"
+                android:id="@+id/check_new_version"
+                android:background="@drawable/item_toggle_bg"
+                android:layout_height="wrap_content"
+                android:textColor="@android:color/black"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:text="@string/check_new_version"
+                />
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_marginTop="@dimen/padding_left"
-            android:paddingTop="15dp"
-            android:paddingBottom="15dp"
-            android:paddingLeft="@dimen/padding_left"
-            android:id="@+id/clean_storage"
-            android:background="@drawable/item_toggle_bg"
-            android:layout_height="wrap_content"
-            android:textColor="@android:color/black"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="@string/clean_storage"
-            />
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_marginTop="@dimen/padding_left"
+                android:paddingTop="15dp"
+                android:paddingBottom="15dp"
+                android:paddingLeft="@dimen/padding_left"
+                android:id="@+id/clean_storage"
+                android:background="@drawable/item_toggle_bg"
+                android:layout_height="wrap_content"
+                android:textColor="@android:color/black"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:text="@string/clean_storage"
+                />
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_marginTop="@dimen/padding_left"
-            android:paddingTop="15dp"
-            android:paddingBottom="15dp"
-            android:paddingLeft="@dimen/padding_left"
-            android:id="@+id/exit_alumni"
-            android:background="@drawable/item_toggle_bg"
-            android:layout_height="wrap_content"
-            android:textColor="@android:color/black"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="@string/exit_alumni"
-            />
-    </LinearLayout>
-
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_marginTop="@dimen/padding_left"
+                android:paddingTop="15dp"
+                android:paddingBottom="15dp"
+                android:layout_marginBottom="@dimen/item_height"
+                android:paddingLeft="@dimen/padding_left"
+                android:id="@+id/exit_alumni"
+                android:background="@drawable/item_toggle_bg"
+                android:layout_height="wrap_content"
+                android:textColor="@android:color/black"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:text="@string/exit_alumni"
+                />
+        </LinearLayout>
+    </ScrollView>
 </FrameLayout>
