--- a/app/src/main/res/layout/alumni_voice_item.xml
+++ b/app/src/main/res/layout/alumni_voice_item.xml
@@ -11,6 +11,7 @@
         android:layout_height="40dp"
         android:id="@+id/head_icon_img"
         android:layout_marginEnd="@dimen/phone_apadding"
+        android:scaleType="fitXY"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true" />
 
