--- a/app/src/main/res/layout/fragment_user_info.xml
+++ b/app/src/main/res/layout/fragment_user_info.xml
@@ -1,6 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ListView
-    android:layout_height="match_parent"
+<RelativeLayout
     android:layout_width="match_parent"
-    android:divider="@null"
-    xmlns:android="http://schemas.android.com/apk/res/android" />
+    android:layout_height="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+    <ListView
+        android:layout_alignParentTop="true"
+        android:layout_height="match_parent"
+        android:id="@+id/mListview"
+        android:layout_width="match_parent"
+        android:divider="@null"
+        android:layout_above="@+id/bottom_foot"
+        xmlns:android="http://schemas.android.com/apk/res/android" />
+    <LinearLayout
+        android:id="@+id/bottom_foot"
+        android:layout_width="match_parent"
+        android:layout_alignParentBottom="true"
+        android:gravity="center"
+        android:background="@drawable/red_bg"
+        android:orientation="vertical"
+        android:layout_height="@dimen/phone_item_height">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:textStyle="bold"
+            android:textColor="@android:color/white"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="@string/click_step_finish_register"
+            android:id="@+id/textView48" />
+    </LinearLayout>
+</RelativeLayout>
