--- a/app/src/main/res/layout/fragment_detail_person_info.xml
+++ b/app/src/main/res/layout/fragment_detail_person_info.xml
@@ -18,6 +18,7 @@
             android:id="@+id/imageView"
             android:layout_marginEnd="@dimen/phone_apadding"
             android:src="@drawable/head2"
+            android:scaleType="fitXY"
             android:layout_centerVertical="true"
             android:layout_alignParentStart="true" />
 
@@ -26,9 +27,8 @@
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="张小军"
-
             android:textColor="@android:color/black"
-            android:id="@+id/textView43"
+            android:id="@+id/nameTV"
             android:layout_alignTop="@+id/imageView"
             android:layout_toEndOf="@+id/imageView" />
 
@@ -38,8 +38,8 @@
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:text="南京大学 软件学院 2014"
             android:textColor="@android:color/black"
-            android:id="@+id/textView44"
-            android:layout_below="@+id/textView43"
+            android:id="@+id/labeTv"
+            android:layout_below="@+id/nameTV"
             android:layout_toEndOf="@+id/imageView" />
     </RelativeLayout>
 
@@ -52,6 +52,6 @@
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="详细信息"
         android:textColor="@android:color/black"
-        android:id="@+id/textView45" />
+        android:id="@+id/infoTV" />
 
 </LinearLayout>
