--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -1,21 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     android:layout_width="match_parent"
-    android:layout_height="80dp"
-    android:background="?attr/colorPrimaryDark"
-    android:padding="16dp"
-    android:theme="@style/ThemeOverlay.AppCompat.Dark"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    >
+    android:layout_height="160dp"
+    android:background="@android:color/black"
+    android:orientation="vertical"
+    xmlns:android="http://schemas.android.com/apk/res/android">
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textStyle="bold"
+        android:text="张小军"
         android:textColor="@android:color/white"
         android:id="@+id/nav_header_username"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true"
-        />
 
+        android:layout_below="@+id/headIMG"
+        android:layout_centerHorizontal="true" />
+
+    <ImageView
+
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:id="@+id/headIMG"
+        android:scaleType="fitXY"
+        android:src="@drawable/head2"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
+
