--- a/app/src/main/res/layout/fragment_recommend_work_item_detail.xml
+++ b/app/src/main/res/layout/fragment_recommend_work_item_detail.xml
@@ -47,8 +47,9 @@
                     android:id="@+id/listView"
                     android:paddingStart="@dimen/phone_apadding"
                     android:paddingEnd="@dimen/phone_apadding"
+                    android:divider="@android:color/white"
+                    android:dividerHeight="@dimen/phone_apadding"
                     android:layout_width="match_parent"
-                    android:divider="@null"
                     android:layout_height="wrap_content"/>
                 <RelativeLayout
                     android:layout_width="match_parent"
