--- a/app/src/main/res/layout/big_img.xml
+++ b/app/src/main/res/layout/big_img.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ImageView
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-
+    android:layout_height="@dimen/dp300"
+    android:scaleType="fitXY"
     xmlns:android="http://schemas.android.com/apk/res/android" />
