--- a/app/src/main/res/layout/fragment_person_alumni_voice_item_detail.xml
+++ b/app/src/main/res/layout/fragment_person_alumni_voice_item_detail.xml
@@ -27,7 +27,7 @@
                     android:layout_height="40dp"
                     android:layout_marginStart="@dimen/phone_apadding"
                     android:id="@+id/alumni_vo_imageView"
-                    android:src="@drawable/cheese_1"
+                    android:src="@drawable/head"
                     android:layout_marginEnd="@dimen/phone_apadding"
                     android:layout_alignParentTop="true"
                     android:layout_alignParentStart="true" />
