--- a/app/src/main/res/layout/voice_collect_item.xml
+++ b/app/src/main/res/layout/voice_collect_item.xml
@@ -11,7 +11,7 @@
         android:layout_height="40dp"
         android:id="@+id/head_icon"
         android:background="@drawable/circle_bg"
-        android:src="@drawable/cheese_1"
+        android:src="@drawable/head"
         android:layout_alignParentTop="true"
         android:layout_marginEnd="@dimen/phone_apadding"
         android:layout_alignParentStart="true"
