--- a/app/src/main/res/layout/comment_item.xml
+++ b/app/src/main/res/layout/comment_item.xml
@@ -2,6 +2,7 @@
 <RelativeLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@android:color/white"
     android:layout_marginTop="@dimen/phone_apadding"
     android:layout_marginBottom="@dimen/phone_apadding"
     xmlns:android="http://schemas.android.com/apk/res/android">
