--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -25,4 +25,9 @@
     <dimen name="dp200">200dp</dimen>
     <dimen name="dp30">30dp</dimen>
     <dimen name="dp40">40dp</dimen>
+    <dimen name="dp32">32dp</dimen>
+    <dimen name="_dp32">-32dp</dimen>
+    <dimen name="dp22">22dp</dimen>
+    <dimen name="_dp22">-22dp</dimen>
+    <dimen name="sp22">22sp</dimen>
 </resources>
